--- a/index.css
+++ b/index.css
@@ -1,368 +1,1 @@
-/* Based on Wing v1.0.0-beta (http://usewing.ml) */
-/* Copyright to Kabir Shah under MIT License */
-
-/* FONT IMPORT */
-@import url("https://fonts.googleapis.com/css?family=Ubuntu+Condensed");
-
-* {
-box-sizing: border-box;
-margin: 0px 0px 0px 0px;
-padding: 0px 0px 0px 0px;
-}
-body {
-animation: fadein 2s;
-background-image: linear-gradient(to right, #fff, #eee);
-scroll-behavior: smooth;
-font-family: "Ubuntu Condensed", "Helvetica";
-}
-
-/* FADEIN (page transition) */
-@keyframes fadein {
-from {
-opacity: 0;
-}
-to {
-opacity: 1;
-}
-}
-.fadein {
-animation-name: fadein;
-}
-
-/* NAV */
-.navbar {
-z-index: 777;
-position: fixed;
-display: block;
-width: 100%;
-height: 50px;
-background-image: linear-gradient(to top, #ddd, #fff);
-box-shadow:  0px 5px 5px 0px rgba(111,111,111, 0.5);
-text-align: center;
-}
-.nav {
-display: inline-block;
-float: center;
-vertical-align: top;
-}
-.nav ul {
-list-style-type: none;
-}
-.nav li {
-float: left;
-padding: 0px 7px;
-line-height: 50px;
-}
-.nav li a {
-font-size: 17px;
-font-weight: bold;
-text-decoration: none;
-color: #000;
-}
-.nav li a:hover {
-color: #777;
-}
-@media screen and (max-width: 768px) {
-.nav {
-background: none;
-float: center;
-}
-#menu-icon {
-display:inline-block;
-background: url("img/nav/menu.png") center;
-display: hidden;
-width: 150px;
-height: 50px;
-}
-#menu-icon:hover {
-opacity: 0.7;
-}
-.nav ul, nav:active ul { 
-display: none;
-background-image: linear-gradient(to top, #fff, #ddd);
-box-shadow:  0px 5px 5px 0px rgba(444,444,444, 0.5);
-margin: -4px;
-width: 150px;
-border-radius: 0px 0px 22px 22px;
-white-space: nowrap;
-}
-.nav:hover ul {
-display: block;
-overflow: hidden;
-}
-.nav ul li {
-width: 100%;
-padding: 10px;
-line-height: 18px;
-}
-.nav a {
-line-height: 20px;
-font-size: 20px;
-font-weight: bold;
-color: #222;
-text-decoration: none;
-}
-.nav a:hover {
-display: inline-block;
-color: #000;
-text-decoration: none;
-}
-}
-
-/* HEADER */
-.parallax {
-display: flex;
-background: #fff;
-max-width: 100%;
-min-height: 300px;
-padding: 50px 0px 0px 0px;
-background-attachment: fixed;
-object-fit: none;
-justify-content: center;
-align-content: flex-start;
-}
-.header {
-display: inline-block;
-width: 768px;
-background: transparent;
-height: 100%;
-text-align: center;
-}
-/* HEADER LOGO */
-.logo {
-width: 768px;
-max-height: 100%;
-object-fit: cover;
-}
-.logo-mobile {
-height: 300px;
-margin: 0 auto;
-display: none;
-}
-@media screen and (max-width: 768px) {
-.logo {
-display:none;
-}
-.logo-mobile {
-display: block;
-}
-}
-
-/* HEADER TITLES */
-h1 {
-line-height: 67px;
-color: #000;
-font-size: 67px;
-}
-h2 {
-line-height: 37px;
-color: #222;
-font-size: 37px;
-}
-h3 {
-line-height: 35px;
-color: #111;
-font-size: 35px;
-font-weight: normal;
-}
-@media (min-width: 551px) and (max-width: 768px) {
-h1 {
-line-height: 47px;
-font-size: 47px;
-}
-h2 {
-line-height: 26px;
-font-size: 26px;
-}
-h3 {
-line-height: 22px;
-font-size: 20px;
-}
-}
-@media screen and (max-width: 550px) {
-h1 {
-line-height: 31px;
-font-size: 31px;
-}
-h2 {
-line-height: 17px;
-font-size: 17px;
-}
-h3 {
-line-height: 16px;
-font-size: 16px;
-}
-}
-
-/* FLEXBOX */
-.container {
-display: block;
-padding: 50px 0px 0px 0px;
-width: 100%;
-}
-.row {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-flex-basis: 768px;
-flex-grow: 1; 
-flex-shrink: 1;
-width: 768px;
-margin: 0px auto; /* centers row */
-justify-content: center; 
-align-items: center; 
-}
-.col {
-flex-grow: 1;
-flex-shrink: 1;
-flex-basis: 33%;
-width: 240px;
-justify-content: space-between;
-align-items: center;
-margin: 5px auto;
-padding: 0px 4px 5px 4px;
-text-align: center;
-}
-.col img {
-width: 100%;
-max-width: 240px;
-}
-img:hover {
-opacity: 0.8;
-}
-@media screen and (max-width: 768px) {
-.row {
-min-width: 300px;
-max-width: 90%;
-}
-.col {
-max-width: 50%;
-}
-}
-
-/* TEXT TYPOGRAPHY */
-h4 {
-margin: 10px 0px 10px 0px;
-font-size: 30px;
-text-align: center;
-font-style: normal;
-font-weight: bold;
-color: #000;
-}
-h5 {
-font-size: 16px;
-font-weight: normal;
-text-align: center;
-}
-p {
-text-align: justify;
-font-size: 16px;
-font-weight: normal;
-}
-a {
-color: #333;
-}
-a:hover {
-color: #777;
-}
-span {
-color: #333;
-font-size: 14px;
-font-style: italic;
-}
-@media screen and (max-width: 768px) {
-p {
-font-size: 14px;
-}
-span {
-font-size: 11px;
-}
-}
-
-/* BUTTONS */
-.button {
-display: inline-block;
-background-image: linear-gradient(to top, #ddd, #fff);
-padding: 10px 0px;
-width: 240px;
-border: 1px solid #ccc;
-border-radius: 14px;
-box-shadow:  0px 3px 3px 0px rgba(111,111,111, 0.5);
-line-height: 19px;
-font-size: 19px;
-font-weight: bold;
-text-decoration: none;
-color: #000;
-}
-.button:hover {
-background-image: linear-gradient(to top, #eee, #ccc);
-box-shadow: none;
-text-decoration: none;
-color: #777;
-}
-.button img {
-width: 17px;
-height: 17px;
-}
-.button:hover img{
-opacity: 0.5;
-}
-@media screen and (max-width: 768px) {
-.button {
-width: 155px;
-font-size: 14px;
-}
-.button img {
-display: none;
-}
-}
-
-/* PHOTO */
-.photo {
-background: #fff;
-margin: 50px 0px 0px 0px;
-min-width: 300px;
-width: 100%;
-height: 400px;
-vertical-align: bottom;
-background: no-repeat center center fixed;
-background-size: 100% 100%;
-}
-/* SOCIAL MEDIA */
-.socialmedia {
-display: flex;
-flex-direction: row;
-flex-grow: 1;
-flex-shrink: 1;
-flex-basis: 32px;
-flex-wrap: nowrap;
-position: fixed;
-width: 100%;
-padding: 5px ;
-bottom: 0px;
-background-image: linear-gradient(to bottom, #ddd, #fff);
-box-shadow:  0px -5px 5px 0px rgba(144,144,144, 0.5);
-justify-content: center; 
-align-items: center; 
-text-align: center;
-}
-.socialmedia a {
-margin: auto 1px;
-}
-.socialmedia a:hover {
-opacity: 0.7;
-}
-.socialmedia img {
-height: 100%;
-width:100%;
-}
-.socialmediamobile {
-display: none;
-}
-@media screen and (max-width: 768px) {
-.socialmedia {
-display: none;
-}
-.socialmediamobile {
-display: flex;
-}
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Condensed);*{box-sizing:border-box;margin:0;padding:0}body{animation:fadein 2s;background-image:linear-gradient(to right,#fff,#eee);scroll-behavior:smooth;font-family:"Ubuntu Condensed",Helvetica}@keyframes fadein{from{opacity:0}to{opacity:1}}.fadein{animation-name:fadein}.navbar{z-index:777;position:fixed;display:block;width:100%;height:50px;background-image:linear-gradient(to top,#ddd,#fff);box-shadow:0 5px 5px 0 rgba(111,111,111,.5);text-align:center}.nav{display:inline-block;float:center;vertical-align:top}.nav ul{list-style-type:none}.nav li{float:left;padding:0 7px;line-height:50px}.nav li a{font-size:17px;font-weight:700;text-decoration:none;color:#000}.nav li a:hover{color:#777}@media screen and (max-width:768px){.nav{background:0 0;float:center}#menu-icon{display:inline-block;background:url(img/nav/menu.png) center;display:hidden;width:150px;height:50px}#menu-icon:hover{opacity:.7}.nav ul,nav:active ul{display:none;background-image:linear-gradient(to top,#fff,#ddd);box-shadow:0 5px 5px 0 rgba(444,444,444,.5);margin:-4px;width:150px;border-radius:0 0 22px 22px;white-space:nowrap}.nav:hover ul{display:block;overflow:hidden}.nav ul li{width:100%;padding:10px;line-height:18px}.nav a{line-height:20px;font-size:20px;font-weight:700;color:#222;text-decoration:none}.nav a:hover{display:inline-block;color:#000;text-decoration:none}}.parallax{display:flex;background:#fff;max-width:100%;min-height:300px;padding:50px 0 0 0;background-attachment:fixed;object-fit:none;justify-content:center;align-content:flex-start}.header{display:inline-block;width:768px;background:0 0;height:100%;text-align:center}.logo{width:768px;max-height:100%;object-fit:cover}.logo-mobile{height:300px;margin:0 auto;display:none}@media screen and (max-width:768px){.logo{display:none}.logo-mobile{display:block}}h1{line-height:67px;color:#000;font-size:67px}h2{line-height:37px;color:#222;font-size:37px}h3{line-height:35px;color:#111;font-size:35px;font-weight:400}@media (min-width:551px) and (max-width:768px){h1{line-height:47px;font-size:47px}h2{line-height:26px;font-size:26px}h3{line-height:22px;font-size:20px}}@media screen and (max-width:550px){h1{line-height:31px;font-size:31px}h2{line-height:17px;font-size:17px}h3{line-height:16px;font-size:16px}}.container{display:block;padding:50px 0 0 0;width:100%}.row{display:flex;flex-direction:row;flex-wrap:wrap;flex-basis:768px;flex-grow:1;flex-shrink:1;width:768px;margin:0 auto;justify-content:center;align-items:center}.col{flex-grow:1;flex-shrink:1;flex-basis:33%;width:240px;justify-content:space-between;align-items:center;margin:5px auto;padding:0 4px 5px 4px;text-align:center}.col img{width:100%;max-width:240px}img:hover{opacity:.8}@media screen and (max-width:768px){.row{min-width:300px;max-width:90%}.col{max-width:50%}}h4{margin:10px 0 10px 0;font-size:30px;text-align:center;font-style:normal;font-weight:700;color:#000}h5{font-size:16px;font-weight:400;text-align:center}p{text-align:justify;font-size:16px;font-weight:400}a{color:#333}a:hover{color:#777}span{color:#333;font-size:14px;font-style:italic}@media screen and (max-width:768px){p{font-size:14px}span{font-size:11px}}.button{display:inline-block;background-image:linear-gradient(to top,#ddd,#fff);padding:10px 0;width:240px;border:1px solid #ccc;border-radius:14px;box-shadow:0 3px 3px 0 rgba(111,111,111,.5);line-height:19px;font-size:19px;font-weight:700;text-decoration:none;color:#000}.button:hover{background-image:linear-gradient(to top,#eee,#ccc);box-shadow:none;text-decoration:none;color:#777}.button img{width:17px;height:17px}.button:hover img{opacity:.5}@media screen and (max-width:768px){.button{width:155px;font-size:14px}.button img{display:none}}.photo{background:#fff;margin:50px 0 0 0;min-width:300px;width:100%;height:400px;vertical-align:bottom;background:no-repeat center center fixed;background-size:100% 100%}.socialmedia{display:flex;flex-direction:row;flex-grow:1;flex-shrink:1;flex-basis:32px;flex-wrap:nowrap;position:fixed;width:100%;padding:5px;bottom:0;background-image:linear-gradient(to bottom,#ddd,#fff);box-shadow:0 -5px 5px 0 rgba(144,144,144,.5);justify-content:center;align-items:center;text-align:center}.socialmedia a{margin:auto 1px}.socialmedia a:hover{opacity:.7}.socialmedia img{height:100%;width:100%}.socialmediamobile{display:none}@media screen and (max-width:768px){.socialmedia{display:none}.socialmediamobile{display:flex}}
